# CryptIT

./: CMakeLists.txt
src/: CMakeLists.txt  crypto.cpp  main.cpp
src/include/: crypto.h  helper.h
src/tests/: CMakeLists.txt
